8823
If you compile with `-Xlog-implicits`, you can see what is happening. Alternatively, try to insert the call to the implicit conversion manaully.
```scala
% squalac -Xlog-implicits *.scala
Functions.scala:8: <str2todstring: error> is not a valid implicit value for String => ?{def strlen: ?} because:
reference to str2todstring is ambiguous;
it is both defined in trait Conversions and imported subsequently by 
import Conversions._
  val toStrLen = (_ : String).strlen
                    ^
Functions.scala:8: error: value strlen is not a member of String
  val toStrLen = (_ : String).strlen
                              ^
one error found
% squalac -Xlog-implicits *.scala
Functions.scala:8: error: reference to str2todstring is ambiguous;
it is both defined in trait Conversions and imported subsequently by 
import Conversions._
  val toStrLen = str2todstring((_ : String)).strlen
                 ^
one error found
```

Before the fix for scala/bug#4270, this code was accepted.
